--- a/platform/nginx/nginx.conf
+++ b/platform/nginx/nginx.conf
@@ -48,6 +48,7 @@ http {
         auth_basic_user_file /etc/nginx/auth/admin.htpasswd;
 
         location /diag/ {
+            auth_basic off;
             proxy_pass http://diagnostics_backend/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
