--- a/platform/nginx/nginx.conf
+++ b/platform/nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
     }
 
     upstream diagnostics_backend {
-        server diagnostics:7681;
+        server host.docker.internal:7681;
     }
 
     # Guest: view-only access (blocks editor)
