Complete PRD task T004: Implement MQTT protocol lab with direct FUXA connection

--- a/platform/fuxa/seeds/mqtt.project.json
+++ b/platform/fuxa/seeds/mqtt.project.json
@@ -5,7 +5,7 @@
     "connections": [
       {
         "name": "mqtt",
-        "type": "MQTT",
+        "type": "MQTTclient",
         "address": "proto-server-mqtt",
         "port": 1883
       }
