--- a/platform/nginx/nginx.conf
+++ b/platform/nginx/nginx.conf
@@ -11,6 +11,10 @@ http {
         server fuxa:1881;
     }
 
+    upstream fuxa_guest_backend {
+        server fuxa_guest:1883;
+    }
+
     upstream diagnostics_backend {
         server host.docker.internal:7681;
     }
@@ -26,12 +30,16 @@ http {
             return 403;
         }
 
-        location /editor {
+        location ~* ^/(editor|device|devices|project) {
             return 403;
         }
 
+        location = / {
+            return 302 /lab;
+        }
+
         location / {
-            proxy_pass http://fuxa_backend;
+            proxy_pass http://fuxa_guest_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
