Complete PRD task T019: harden guest navigation

--- a/platform/nginx/nginx.conf
+++ b/platform/nginx/nginx.conf
@@ -30,7 +30,7 @@ http {
             return 403;
         }
 
-        location ~* ^/(editor|device|devices|project) {
+        location ~* ^/(editor|device|devices|project|home|config|configurator) {
             return 403;
         }
 
