--- a/platform/web/nginx.conf
+++ b/platform/web/nginx.conf
@@ -7,23 +7,17 @@ http {
     default_type  application/octet-stream;
     sendfile      on;
 
-    upstream frontend_backend {
-        server frontend:5000;
-    }
-
-    upstream guest_backend {
-        server gateway:1881;
-    }
-
-    upstream admin_backend {
-        server gateway:1882;
-    }
+    resolver 127.0.0.11 valid=10s ipv6=off;
+    resolver_timeout 5s;
 
     server {
         listen 8080;
+        set $frontend_backend "http://frontend:5000";
+        set $guest_backend "http://gateway:1881";
+        set $admin_backend "http://gateway:1882";
 
         location /api/lab/stream {
-            proxy_pass http://frontend_backend;
+            proxy_pass $frontend_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -35,7 +29,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://frontend_backend;
+            proxy_pass $frontend_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -45,7 +39,7 @@ http {
 
         location /guest/ {
             rewrite ^/guest/(.*)$ /$1 break;
-            proxy_pass http://guest_backend;
+            proxy_pass $guest_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header Authorization $http_authorization;
@@ -56,7 +50,7 @@ http {
 
         location /admin/ {
             rewrite ^/admin/(.*)$ /$1 break;
-            proxy_pass http://admin_backend;
+            proxy_pass $admin_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header Authorization $http_authorization;
@@ -66,7 +60,7 @@ http {
         }
 
         location /diag/ {
-            proxy_pass http://admin_backend;
+            proxy_pass $admin_backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -79,7 +73,7 @@ http {
         }
 
         location / {
-            proxy_pass http://frontend_backend;
+            proxy_pass $frontend_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
