Complete PRD task T034: Normalize FUXA guest/admin paths

--- a/platform/nginx/nginx.conf
+++ b/platform/nginx/nginx.conf
@@ -31,6 +31,10 @@ http {
             return 403;
         }
 
+        location ~* ^/(modbus|opcua|bacnet|cip|dnp3|iec104|mqtt|s7)/?$ {
+            return 302 /lab;
+        }
+
         location = / {
             return 302 /lab;
         }
@@ -63,6 +67,10 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 3600;
+        }
+
+        location ~* ^/(modbus|opcua|bacnet|cip|dnp3|iec104|mqtt|s7)/?$ {
+            return 302 /lab;
         }
 
         location / {
