Complete PRD task T035: Redirect protocol slugs on web proxy

--- a/platform/web/nginx.conf
+++ b/platform/web/nginx.conf
@@ -16,6 +16,14 @@ http {
         set $guest_backend "http://gateway:1881";
         set $admin_backend "http://gateway:1882";
 
+        location ~* ^/guest/(modbus|opcua|bacnet|cip|dnp3|iec104|mqtt|s7)/?$ {
+            return 302 /guest/lab;
+        }
+
+        location ~* ^/admin/(modbus|opcua|bacnet|cip|dnp3|iec104|mqtt|s7)/?$ {
+            return 302 /admin/lab;
+        }
+
         location /api/lab/stream {
             proxy_pass $frontend_backend;
             proxy_http_version 1.1;
