Complete PRD task T041: Improve FUXA launch UX

--- a/platform/web/nginx.conf
+++ b/platform/web/nginx.conf
@@ -16,6 +16,10 @@ http {
         set $guest_backend "http://gateway:1881";
         set $admin_backend "http://gateway:1882";
 
+        location ~* ^/lab/?$ {
+            return 302 /guest/lab/;
+        }
+
         location ~* ^/guest/(modbus|opcua|bacnet|cip|dnp3|iec104|mqtt|s7)/?$ {
             return 302 /guest/lab;
         }
