Complete PRD task T042: Enforce FUXA view styles

--- a/platform/nginx/nginx.conf
+++ b/platform/nginx/nginx.conf
@@ -27,19 +27,30 @@ http {
             return 403;
         }
 
-        location ~* ^/(editor|device|devices|project|home|config|configurator) {
+        location ~* ^/(editor|device|devices|project|config|configurator) {
+            return 403;
+        }
+
+        location ~* ^/lab(?:/|$) {
+            return 302 /home;
+        }
+
+        location ~* ^/setup(?:/|$) {
             return 403;
         }
 
         location ~* ^/(modbus|opcua|bacnet|cip|dnp3|iec104|mqtt|s7)/?$ {
-            return 302 /lab;
+            return 302 /home;
         }
 
         location = / {
-            return 302 /lab;
+            return 302 /home;
         }
 
         location / {
+            sub_filter_types text/html;
+            sub_filter_once off;
+            sub_filter '</head>' '<style>button, a { cursor: default; }[aria-label*="Setup" i],[title*="Setup" i],[data-tooltip*="Setup" i]{display:none !important;}</style><script>(function(){function hideNav(){var labels=["Home","Lab","Editor","Setup","Settings","Users","Roles","API Keys","Connections","Plugins","Reports","Scripts","Logs","Alarms","Notifications","Frontend Scripts"];var nodes=document.querySelectorAll("button, a, div, span, li");for(var i=0;i<nodes.length;i++){var n=nodes[i];var t=n.textContent;if(t){t=t.trim();if(labels.indexOf(t)!==-1){n.style.display="none";continue;}}var al=n.getAttribute&&n.getAttribute("aria-label");var tt=n.getAttribute&&n.getAttribute("title");if((al&&/setup/i.test(al))||(tt&&/setup/i.test(tt))){n.style.display="none";}}var dialogs=document.querySelectorAll("div");for(var j=0;j<dialogs.length;j++){var d=dialogs[j];var dt=d.textContent;if(dt&&dt.indexOf("Setup")!==-1){d.style.display="none";}}}setInterval(hideNav,1000);})();</script></head>';
             proxy_pass http://fuxa_guest_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
