--- a/platform/web/nginx.conf
+++ b/platform/web/nginx.conf
@@ -17,15 +17,27 @@ http {
         set $admin_backend "http://gateway:1882";
 
         location ~* ^/lab/?$ {
-            return 302 /guest/lab/;
+            return 302 /guest/home/;
+        }
+
+        location ~* ^/home/?$ {
+            return 302 /guest/home/;
         }
 
         location ~* ^/guest/(modbus|opcua|bacnet|cip|dnp3|iec104|mqtt|s7)/?$ {
-            return 302 /guest/lab;
+            return 302 /guest/;
         }
 
         location ~* ^/admin/(modbus|opcua|bacnet|cip|dnp3|iec104|mqtt|s7)/?$ {
             return 302 /admin/lab;
+        }
+
+        location ~* ^/guest/lab/?$ {
+            return 302 /guest/home/;
+        }
+
+        location ~* ^/guest/(editor|device|devices|project|config|configurator) {
+            return 403;
         }
 
         location /api/lab/stream {
